Update user views

--- a/ForageMvc.csproj
+++ b/ForageMvc.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>_2nd_Team_Week_MVC</RootNamespace>
+    <RootNamespace>Botanical Adventure</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.0" />
